# JuntaSerialRobo

./: README.md  organizar.txt
a_joint/: joint_states_node.cpp  serial_experiment.cpp
a_robot/: p_GoHome.cpp
b_testes/: CMakeLists.txt  ideiatesteserial  package.xml  start
c_workspace/test_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
c_workspace/test_ws/install/lc_start/lib/lc_start/: lc_test  listener  talker
c_workspace/test_ws/install/lc_start/share/lc_start/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
c_workspace/test_ws/install/lc_test/share/lc_test/: package.bash  package.zsh
c_workspace/test_ws/install/pyconvo/lib/pyconvo/: listener  (+1 more)
c_workspace/test_ws/log/: latest_build  latest_list
c_workspace/test_ws/src/lc_start/: CMakeLists.txt
c_workspace/test_ws/src/lc_start/src/: lc_test.cpp  sr_pub.cpp  sr_sub.cpp
c_workspace/test_ws/src/lc_test/: CMakeLists.txt  package.xml
c_workspace/test_ws/src/lc_test/src/: lc_client.cpp
c_workspace/test_ws/src/pyconvo/: setup.py
c_workspace/test_ws/src/pyconvo/pyconvo/: convo.py
r_relatorios/: diario.json  new  relatorio.aux  relatorio.fdb_latexmk  relatorio.fls  relatorio.out  relatorio.tex
r_relatorios/bolsa/: main.fdb_latexmk  main.fls  main.tex  references.bib  settings.tex
r_relatorios/pesquisa/: main.aux  main.blg  main.fdb_latexmk  main.fls  main.tex  settings.tex
r_relatorios/semanal/: relatorio.aux  relatorio.fdb_latexmk  relatorio.fls  relatorio.tex
(+2 files in other folders)
